Database fixes, improved position closing function

--- a/strategy_config.ini
+++ b/strategy_config.ini
@@ -31,7 +31,7 @@ RANGING_ATR_THRESHOLD = 0.15
 MIN_TREND_STRENGTH = 0.20
 
 [trading]
-SYMBOLS = SOLUSDT,PIPPINUSDT,BEATUSDT,XRPUSDT,SQDUSDT,ZECUSDT,ZBTUSDT,AVNTUSDT,FARTCOINUSDT,HYPEUSDT,DOGEUSDT,RAVEUSDT,NIGHTUSDT,MOVEUSDT,ADAUSDT,HUSDT,SUIUSDT,1000PEPEUSDT,BANANAUSDT,XAUTUSDT
+SYMBOLS = SOLUSDT,ZBTUSDT,XRPUSDT,BEATUSDT,PIPPINUSDT,ZECUSDT,0GUSDT,FARTCOINUSDT,SQDUSDT,HYPEUSDT,DOGEUSDT,RAVEUSDT,AVNTUSDT,NIGHTUSDT,ADAUSDT,BANANAUSDT,SUIUSDT,MONUSDT,BCHUSDT,AAVEUSDT
 MIN_EXPECTED_GAIN_PCT = 0.8
 DEFAULT_SL_PCT = 1.8
 DEFAULT_TP_PCT = 3.0
