sync watchdog.py

--- a/strategy_config.ini
+++ b/strategy_config.ini
@@ -31,10 +31,10 @@ RANGING_ATR_THRESHOLD = 0.15
 MIN_TREND_STRENGTH = 0.20
 
 [trading]
-SYMBOLS = SOLUSDT,ZBTUSDT,XRPUSDT,BEATUSDT,PIPPINUSDT,ZECUSDT,0GUSDT,FARTCOINUSDT,SQDUSDT,HYPEUSDT,DOGEUSDT,RAVEUSDT,AVNTUSDT,NIGHTUSDT,ADAUSDT,BANANAUSDT,SUIUSDT,MONUSDT,BCHUSDT,AAVEUSDT
-MIN_EXPECTED_GAIN_PCT = 0.8
-DEFAULT_SL_PCT = 1.8
-DEFAULT_TP_PCT = 3.0
+SYMBOLS = SOLUSDT,XRPUSDT,DOGEUSDT,HYPEUSDT,SUIUSDT,ADAUSDT,BCHUSDT,BNBUSDT,WIFUSDT,AAVEUSDT,LINKUSDT,NEARUSDT,LTCUSDT,AVAXUSDT,DOTUSDT
+MIN_EXPECTED_GAIN_PCT = 1.2
+DEFAULT_SL_PCT = 1.5
+DEFAULT_TP_PCT = 2.8
 MIN_SL_PCT = 0.6
 MIN_TP_PCT = 1.2
 MIN_RR_RATIO = 1.4
@@ -47,8 +47,8 @@ EMA_FAST = 12
 EMA_SLOW = 26
 EMA_LONG = 50
 RSI_PERIOD = 14
-RSI_OVERBOUGHT = 68
-RSI_OVERSOLD = 32
+RSI_OVERBOUGHT = 72
+RSI_OVERSOLD = 28
 ENABLE_RSI_FILTER = True
 ATR_PERIOD = 14
 VOLUME_MA_PERIOD = 20
@@ -59,14 +59,14 @@ STRATEGY_STYLE = TREND
 ENABLE_BREAKOUT_FILTER = true
 BREAKOUT_LOOKBACK_BARS = 20
 BREAKOUT_MIN_PCT = 0.15
-TARGET_SIGNALS_PER_DAY = 8
+TARGET_SIGNALS_PER_DAY = 6
 MIN_SIGNAL_STRENGTH = 63
 REQUIRE_EMA_CROSS_FOR_ENTRY = false
 ENABLE_WEAK_EMA_ENTRY = true
 WEAK_EMA_TOLERANCE = 0.20
 MIN_CANDLES_REQUIRED = 100
 KLINES_LIMIT = 350
-KLINES_INTERVAL = 5
+KLINES_INTERVAL = 15
 EMA_WEIGHT = 18
 RSI_WEIGHT = 27
 TREND_WEIGHT = 30
@@ -95,20 +95,20 @@ HARD_STOP_MARGIN_USAGE_PCT = 90.0
 
 [risk_management]
 MAX_BALANCE_FRACTION = 0.85
-POSITION_SIZE_USDT = 35.0
-MIN_POSITION_USDT = 20.0
-MAX_POSITION_USDT = 50.0
+POSITION_SIZE_USDT = 40.0
+MIN_POSITION_USDT = 35.0
+MAX_POSITION_USDT = 40.0
 MIN_NOTIONAL_USDT = 6.0
 USE_KELLY_CRITERION = false
 MAX_KELLY_FRACTION = 0.20
 MAX_POSITIONS_PER_SYMBOL = 1
-MAX_TOTAL_POSITIONS = 2
+MAX_TOTAL_POSITIONS = 1
 USE_DYNAMIC_POSITION_LIMITS = false
-POSITION_COOLDOWN_MINUTES = 3
-AUTO_FLIP_ENABLED = true
+POSITION_COOLDOWN_MINUTES = 15
+AUTO_FLIP_ENABLED = false
 AUTO_FLIP_MIN_LOSS_PCT = 0.6
 AUTO_FLIP_MIN_SIGNAL_STRENGTH = 75
-AUTO_FLIP_COOLDOWN_MINUTES = 3
+AUTO_FLIP_COOLDOWN_MINUTES = 15
 AUTO_FLIP_MIN_MOVEMENT_PCT = 0.5
 AUTO_ENHANCE_THRESHOLD = 5.0
 MAX_DAILY_LOSS_PCT = 5.0
@@ -138,11 +138,11 @@ MAX_CONSECUTIVE_LOSSES = 5
 MAX_SPREAD_PCT = 0.1
 
 [momentum_trading]
-ENABLED = true
+ENABLED = false
 MOMENTUM_SYMBOLS = BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,ADAUSDT,AVAXUSDT,DOTUSDT,DOGEUSDT,LINKUSDT,UNIUSDT,LTCUSDT,ATOMUSDT,ETCUSDT
 MIN_MOMENTUM_PCT = 3.5
 MIN_VOLUME_USDT = 5000000
-MIN_RR_RATIO = 1.3
+MIN_RR_RATIO = 1.5
 MOMENTUM_TP_PCT = 4.0
 MOMENTUM_SL_PCT = 1.8
 MOMENTUM_MAX_TIME_MINUTES = 30
@@ -150,7 +150,7 @@ MOMENTUM_TRAILING_ACTIVATION = 0.5
 MOMENTUM_TRAILING_DISTANCE = 0.5
 MOMENTUM_EXIT_ON_RSI_DROP = true
 MOMENTUM_RSI_EXIT_THRESHOLD = 70.0
-MOMENTUM_MIN_VOLUME_RATIO = 1.2
+MOMENTUM_MIN_VOLUME_RATIO = 1.5
 MOMENTUM_SCAN_INTERVAL = 10
 MOMENTUM_VOLUME_RATIO = 2.0
 MOMENTUM_RSI_THRESHOLD = 65
@@ -191,8 +191,8 @@ MIN_TRADES = 20
 [fees]
 TAKER_FEE_PCT = 0.06
 MAKER_FEE_PCT = 0.01
-EXPECTED_SLIPPAGE_PCT = 0.20
-MIN_PROFIT_MARGIN_PCT = 0.30
+EXPECTED_SLIPPAGE_PCT = 0.25
+MIN_PROFIT_MARGIN_PCT = 0.50
 
 [notifications]
 ALERT_ON_SIGNAL = true
@@ -208,7 +208,7 @@ ENABLE_API_HEALTH_CHECKS = true
 
 [emergency_exit]
 ENABLE_PCT_LOSS_EXIT = true
-MAX_LOSS_PCT_PER_TRADE = 1.8
+MAX_LOSS_PCT_PER_TRADE = 1.5
 ENABLE_FUNDING_COST_EXIT = true
 MAX_FUNDING_COST_PCT = 0.10
 MAX_SLTP_RETRY_TIME_SECONDS = 200
@@ -234,12 +234,12 @@ RETRAIN_INTERVAL_HOURS = 24
 ML_BLEND_WEIGHT = 0.50
 MODEL_TYPE = random_forest
 MIN_MODEL_ACCURACY = 0.52
-CONFIDENCE_THRESHOLD = 0.60
+CONFIDENCE_THRESHOLD = 0.65
 FEATURE_WINDOW = 100
 USE_TECHNICAL_INDICATORS = true
 USE_VOLUME_FEATURES = true
 USE_PRICE_FEATURES = true
-MIN_PREDICTION_CONFIDENCE = 0.52
+MIN_PREDICTION_CONFIDENCE = 0.60
 MAX_POSITION_MULTIPLIER = 1.5
 MIN_POSITION_MULTIPLIER = 1.0
 ENABLE_ML_EXECUTION_FILTER = true
