--- a/strategy_config.ini
+++ b/strategy_config.ini
@@ -31,7 +31,7 @@ RANGING_ATR_THRESHOLD = 0.15
 MIN_TREND_STRENGTH = 0.20
 
 [trading]
-SYMBOLS = SOLUSDT,XRPUSDT,DOGEUSDT,HYPEUSDT,SUIUSDT,ADAUSDT,BCHUSDT,BNBUSDT,WIFUSDT,AAVEUSDT,LINKUSDT,NEARUSDT,LTCUSDT,AVAXUSDT,DOTUSDT
+SYMBOLS = SOLUSDT,XRPUSDT,DOGEUSDT,HYPEUSDT,SUIUSDT,ADAUSDT,BCHUSDT,BNBUSDT,WIFUSDT,LINKUSDT,AAVEUSDT,LTCUSDT,NEARUSDT,AVAXUSDT,DOTUSDT
 MIN_EXPECTED_GAIN_PCT = 1.2
 DEFAULT_SL_PCT = 1.5
 DEFAULT_TP_PCT = 2.8
@@ -94,9 +94,9 @@ MAX_MARGIN_USAGE_PCT = 80.0
 HARD_STOP_MARGIN_USAGE_PCT = 90.0
 
 [risk_management]
-MAX_BALANCE_FRACTION = 0.85
-POSITION_SIZE_USDT = 40.0
-MIN_POSITION_USDT = 35.0
+MAX_BALANCE_FRACTION = 0.90
+POSITION_SIZE_USDT = 35.0
+MIN_POSITION_USDT = 25.0
 MAX_POSITION_USDT = 40.0
 MIN_NOTIONAL_USDT = 6.0
 USE_KELLY_CRITERION = false
